[tool.poetry]
name = "poetry-tip2018"
version = "0.1.0"
description = ""
authors = ["alikaraali <alixkaraali@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_tip2018"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
